--- a/hapi-fhir-server/pom.xml
+++ b/hapi-fhir-server/pom.xml
@@ -10,15 +10,21 @@
 	</parent>
 
 	<artifactId>hapi-fhir-server</artifactId>
+	<version>6.2.4.1-reindex-perf-tempfix-j</version>
 	<packaging>bundle</packaging>
 
 	<name>HAPI FHIR - Server Framework</name>
+
+	<properties>
+		<maven.deploy.skip>false</maven.deploy.skip>
+		<mainVersion>6.2.4</mainVersion>
+	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
 			<artifactId>hapi-fhir-base</artifactId>
-			<version>${project.version}</version>
+			<version>${mainVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
