--- a/hapi-fhir-structures-dstu3/pom.xml
+++ b/hapi-fhir-structures-dstu3/pom.xml
@@ -9,7 +9,13 @@
 		<relativePath>../hapi-deployable-pom/pom.xml</relativePath>
 	</parent>
 
+	<properties>
+		<maven.deploy.skip>false</maven.deploy.skip>
+		<mainVersion>6.2.4</mainVersion>
+	</properties>
+
 	<artifactId>hapi-fhir-structures-dstu3</artifactId>
+	<version>6.2.4.1-reindex-perf-tempfix-j</version>
 	<packaging>bundle</packaging>
 
 	<name>HAPI FHIR Structures - DSTU3</name>
@@ -114,7 +120,7 @@
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
 			<artifactId>hapi-fhir-base</artifactId>
-			<version>${project.version}</version>
+			<version>${mainVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
@@ -143,7 +149,7 @@
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
 			<artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
-			<version>${project.version}</version>
+			<version>${mainVersion}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -154,13 +160,13 @@
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
 			<artifactId>hapi-fhir-client</artifactId>
-			<version>${project.version}</version>
+			<version>${mainVersion}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
 			<artifactId>hapi-fhir-server</artifactId>
-			<version>${project.version}</version>
+			<version>${mainVersion}</version>
 			<optional>true</optional>
 		</dependency>
 
@@ -255,7 +261,7 @@
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-test-utilities</artifactId>
-            <version>${project.version}</version>
+            <version>${mainVersion}</version>
             <scope>test</scope>
         </dependency>
 
